--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,11 +7,11 @@ name: k3s-service
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ "*" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ "*" ]
 
 env:
   # Use docker.io for Docker Hub if empty
