--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
   # k3s version
-  K3S_VERSION: "v1.30.6-k3s1"
+  K3S_VERSION: "v1.30.6+k3s1"
 
 jobs:
   build:
