--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           context: .
           build-args: |
-            - K3S_VERSION=${K3S_VERSION}
+            - K3S_VERSION=${{env.K3S_VERSION}}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
